Update: Add 'Tipe Data Ordinal pada Pandas Data Frame' tricks - Add 'Tipe Data Ordinal pada Pandas' points

--- a/Trik_Pandas_08.ipynb
+++ b/Trik_Pandas_08.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "a1f05b87",
+   "id": "67852753",
    "metadata": {},
    "source": [
     "![Pandas_logo.png](attachment:Pandas_logo.png)"
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adfa9470",
+   "id": "fcf6cda7",
    "metadata": {},
    "source": [
     "# Title: Pandas 08"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e774bee1",
+   "id": "69cb1e44",
    "metadata": {},
    "source": [
     "#### \n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8eaf146",
+   "id": "f2f471c3",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "880a059f",
+   "id": "bd5313dc",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c240dd11",
+   "id": "b268800e",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "154e4388",
+   "id": "f54b4796",
    "metadata": {},
    "source": [
     "- Membuat dataframe dengan dua buah kolom yang setiap kolom memiliki 5 *value*."
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c5ca57ef",
+   "id": "c55b5cfe",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23b9d4bd",
+   "id": "11c38429",
    "metadata": {},
    "source": [
     "#### Random Sampling with/without Replacement"
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87160a36",
+   "id": "911712df",
    "metadata": {},
    "source": [
     "- Method `sample()` membutuhkan tiga buah parameter.\n",
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c09a8b92",
+   "id": "655e8958",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1441dd73",
+   "id": "89303019",
    "metadata": {},
    "outputs": [
     {
@@ -325,17 +325,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "892033ef",
+   "id": "aa39232b",
    "metadata": {},
    "source": [
     "#### \n",
-    "### #29 Akses Nilai Variabel Dalam Fungsi Query\n",
+    "### #30 Akses Nilai Variabel Dalam Fungsi Query\n",
     "#### Source : https://youtu.be/5GnsXm8ANts"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "81bbc002",
+   "id": "5907ffbe",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1b11a434",
+   "id": "d77eab21",
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "621f7c28",
+   "id": "8b866578",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15b43928",
+   "id": "8452ccdc",
    "metadata": {},
    "source": [
     "- Buat dataframe dengan lima buah baris dan kolom.\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3ac16469",
+   "id": "0115393d",
    "metadata": {},
    "outputs": [
     {
@@ -420,43 +420,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>10</td>\n",
        "      <td>8</td>\n",
-       "      <td>13</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>10</td>\n",
-       "      <td>6</td>\n",
-       "      <td>17</td>\n",
-       "      <td>10</td>\n",
-       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "      <td>12</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>13</td>\n",
-       "      <td>10</td>\n",
-       "      <td>18</td>\n",
-       "      <td>14</td>\n",
+       "      <td>7</td>\n",
        "      <td>5</td>\n",
+       "      <td>17</td>\n",
+       "      <td>10</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>11</td>\n",
-       "      <td>18</td>\n",
-       "      <td>5</td>\n",
-       "      <td>18</td>\n",
-       "      <td>16</td>\n",
+       "      <td>8</td>\n",
+       "      <td>19</td>\n",
+       "      <td>17</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>12</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3</td>\n",
        "      <td>7</td>\n",
-       "      <td>10</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -464,11 +464,11 @@
       ],
       "text/plain": [
        "    A   B   C   D   E\n",
-       "0  10   8  13   9   1\n",
-       "1  10   6  17  10   8\n",
-       "2  13  10  18  14   5\n",
-       "3  11  18   5  18  16\n",
-       "4  12   2   4   7  10"
+       "0   8   4   3  10  15\n",
+       "1   2   4  15  12  18\n",
+       "2   7   5  17  10  12\n",
+       "3   8  19  17  10   7\n",
+       "4  11   3   7   3   7"
       ]
      },
      "execution_count": 6,
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d155f475",
+   "id": "0c4e99d1",
    "metadata": {},
    "source": [
     "#### Akses Nilai Variabel pada `query()`"
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fe8864d",
+   "id": "86cbb4e6",
    "metadata": {},
    "source": [
     "- Method query digunakan untuk menyeleksi baris."
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b822f4b3",
+   "id": "ba0461c7",
    "metadata": {},
    "outputs": [
     {
@@ -538,38 +538,20 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>13</td>\n",
-       "      <td>10</td>\n",
-       "      <td>18</td>\n",
-       "      <td>14</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>11</td>\n",
-       "      <td>18</td>\n",
-       "      <td>5</td>\n",
-       "      <td>18</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>12</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3</td>\n",
        "      <td>7</td>\n",
-       "      <td>10</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    A   B   C   D   E\n",
-       "2  13  10  18  14   5\n",
-       "3  11  18   5  18  16\n",
-       "4  12   2   4   7  10"
+       "    A  B  C  D  E\n",
+       "4  11  3  7  3  7"
       ]
      },
      "execution_count": 7,
@@ -584,13 +566,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c35d9d58",
+   "id": "f2b7ee16",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "11.2"
+       "7.2"
       ]
      },
      "execution_count": 8,
@@ -606,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c2c9e856",
+   "id": "5f625ba1",
    "metadata": {},
    "outputs": [
     {
@@ -639,20 +621,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>13</td>\n",
+       "      <th>0</th>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "      <td>10</td>\n",
-       "      <td>18</td>\n",
-       "      <td>14</td>\n",
-       "      <td>5</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8</td>\n",
+       "      <td>19</td>\n",
+       "      <td>17</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>12</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3</td>\n",
        "      <td>7</td>\n",
-       "      <td>10</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -660,8 +650,9 @@
       ],
       "text/plain": [
        "    A   B   C   D   E\n",
-       "2  13  10  18  14   5\n",
-       "4  12   2   4   7  10"
+       "0   8   4   3  10  15\n",
+       "3   8  19  17  10   7\n",
+       "4  11   3   7   3   7"
       ]
      },
      "execution_count": 9,
@@ -671,6 +662,375 @@
    ],
    "source": [
     "df.query('A > @rerata') # menampilkan baris nilai yang lebih besar dari rata-rata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76d0517d",
+   "metadata": {},
+   "source": [
+    "#### \n",
+    "### #31 Tipe Data Ordinal pada Pandas Data Frame\n",
+    "#### Source : https://youtu.be/EbN6wURPJLY"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c5ebbf2",
+   "metadata": {},
+   "source": [
+    "#### Import Modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "27f92660",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Cek versi\n",
+    "print(pd.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18a73bb0",
+   "metadata": {},
+   "source": [
+    "#### Persiapan Data Frame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "427b7a6d",
+   "metadata": {},
+   "source": [
+    "- Membuat dua buah kolom yang memiliki 4 value/ baris."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "612614ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pelanggan</th>\n",
+       "      <th>kepuasan</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11</td>\n",
+       "      <td>baik</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12</td>\n",
+       "      <td>cukup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13</td>\n",
+       "      <td>buruk</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>14</td>\n",
+       "      <td>cukup</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   pelanggan kepuasan\n",
+       "0         11     baik\n",
+       "1         12    cukup\n",
+       "2         13    buruk\n",
+       "3         14    cukup"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = {'pelanggan':[11, 12, 13, 14], \n",
+    "     'kepuasan':['baik', 'cukup', 'buruk', 'cukup']}\n",
+    "\n",
+    "df = pd.DataFrame(d)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3be7bf1",
+   "metadata": {},
+   "source": [
+    "#### Tipe Data Ordinal pada Pandas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e36e093",
+   "metadata": {},
+   "source": [
+    "- Untuk memberi tahu komputer cara menilai tingkatan ordinal, dapat digunakan module `CategoricalDtype` dari `pandas.api.types`.\n",
+    "- `CategoricalDtype` digunakan untuk menspesifikasikan urutan tingkatan ordinal."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3e4a4967",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pelanggan</th>\n",
+       "      <th>kepuasan</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11</td>\n",
+       "      <td>baik</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12</td>\n",
+       "      <td>cukup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13</td>\n",
+       "      <td>buruk</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>14</td>\n",
+       "      <td>cukup</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   pelanggan kepuasan\n",
+       "0         11     baik\n",
+       "1         12    cukup\n",
+       "2         13    buruk\n",
+       "3         14    cukup"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pandas.api.types import CategoricalDtype\n",
+    "\n",
+    "tingkat_kepuasan = CategoricalDtype(['buruk', 'cukup', 'baik', 'sangat baik'], \n",
+    "                                    ordered=True)\n",
+    "\n",
+    "df['kepuasan'] = df['kepuasan'].astype(tingkat_kepuasan) # membuat kolom kepuasan memiliki tingkat ordinal\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4fd2d260",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pelanggan</th>\n",
+       "      <th>kepuasan</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13</td>\n",
+       "      <td>buruk</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12</td>\n",
+       "      <td>cukup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>14</td>\n",
+       "      <td>cukup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11</td>\n",
+       "      <td>baik</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   pelanggan kepuasan\n",
+       "2         13    buruk\n",
+       "1         12    cukup\n",
+       "3         14    cukup\n",
+       "0         11     baik"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df.sort_values('kepuasan', ascending=True) # mengurutkan dataframe berdasarkan kolom kepuasan\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "33ecd8ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pelanggan</th>\n",
+       "      <th>kepuasan</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12</td>\n",
+       "      <td>cukup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>14</td>\n",
+       "      <td>cukup</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11</td>\n",
+       "      <td>baik</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   pelanggan kepuasan\n",
+       "1         12    cukup\n",
+       "3         14    cukup\n",
+       "0         11     baik"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['kepuasan'] >= 'cukup'] # menampilkan dataframe yang nilai kolom kepuasan lebih besar dari cukup"
    ]
   }
  ],
