--- a/Trik_Pandas_09.ipynb
+++ b/Trik_Pandas_09.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "b0795a97",
+   "id": "933ed2ce",
    "metadata": {},
    "source": [
     "![Pandas_logo.png](attachment:Pandas_logo.png)"
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f963afe",
+   "id": "296348cd",
    "metadata": {},
    "source": [
     "# Title: Pandas 09"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5df6a44",
+   "id": "3b0d8acb",
    "metadata": {},
    "source": [
     "#### \n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51b8cde4",
+   "id": "e6259eff",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "92f6d032",
+   "id": "bbd43220",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4015332f",
+   "id": "e7d20425",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87e11300",
+   "id": "6aa8869c",
    "metadata": {},
    "source": [
     "- Membuat dataframe dengan dua buah kolom yang setiap kolom memiliki 8 value.\n",
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8f8a44f1",
+   "id": "65f7b707",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95ddde39",
+   "id": "be257bef",
    "metadata": {},
    "source": [
     "#### Menampilkan nilai kumulatif (cummulative)"
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc2ba863",
+   "id": "50c880f1",
    "metadata": {},
    "source": [
     "- Fungsi `cumsum()` berguna untuk menampilkan data secara kumulatif.\n",
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "17afa5fb",
+   "id": "fdbe1e7e",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d8a80d4",
+   "id": "77f3c965",
    "metadata": {},
    "source": [
     "- Menambahkan kolom baru bernama 'jumlah_goal_kumulatif'."
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a8d7f25d",
+   "id": "61afa91a",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e5da454",
+   "id": "39b0e56d",
    "metadata": {},
    "source": [
     "- Menambahkan kolom baru bernama 'jumlah_goal_kumulatif_tiap_pemain'."
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "62768087",
+   "id": "8d097418",
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23842a3b",
+   "id": "dff78fe1",
    "metadata": {},
    "source": [
     "- Menambahkan kolom baru bernama 'cummax'.\n",
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a96925c9",
+   "id": "3af4129a",
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1739b0c",
+   "id": "0433e234",
    "metadata": {},
    "source": [
     "- Menambahkan kolom baru bernama 'cummin'.\n",
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "12d450f4",
+   "id": "b45fe977",
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5d15d88",
+   "id": "3e60dbaa",
    "metadata": {},
    "source": [
     "- Menambahkan kolom baru bernama 'cumprod'.\n",
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5de6550e",
+   "id": "49a6ad07",
    "metadata": {},
    "outputs": [
     {
@@ -978,6 +978,459 @@
    ],
    "source": [
     "df['cumprod'] = df['goal'].cumprod()\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "397ee0d6",
+   "metadata": {},
+   "source": [
+    "#### \n",
+    "### #34 Mapping Data Frame dengan applymap\n",
+    "#### Source : https://youtu.be/Z5pG34OOXi0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4793c590",
+   "metadata": {},
+   "source": [
+    "#### Import Modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0a22eba6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Cek versi\n",
+    "print(pd.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa3ce9be",
+   "metadata": {},
+   "source": [
+    "#### Persiapan Data Frame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e69b6e2f",
+   "metadata": {},
+   "source": [
+    "- Membuat dataframe yang memiliki 3 kolom.\n",
+    "- Nilai dari kolom pertama dan ketiga sengaja dibuat tidak standard/ tidak selaras/ tidak konsisten."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f553fcbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>jenis_kelamin</th>\n",
+       "      <th>usia</th>\n",
+       "      <th>shift</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Pria</td>\n",
+       "      <td>23</td>\n",
+       "      <td>pagi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Wanita</td>\n",
+       "      <td>21</td>\n",
+       "      <td>siang</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>lelaki</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Malam</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Lelaki</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Siang</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>perempuan</td>\n",
+       "      <td>21</td>\n",
+       "      <td>pagi</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  jenis_kelamin  usia  shift\n",
+       "0          Pria    23   pagi\n",
+       "1        Wanita    21  siang\n",
+       "2        lelaki    24  Malam\n",
+       "3        Lelaki    22  Siang\n",
+       "4     perempuan    21   pagi"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({'jenis_kelamin':['Pria', 'Wanita', 'lelaki', 'Lelaki', 'perempuan'], \n",
+    "                   'usia':[23, 21, 24, 22, 21], \n",
+    "                   'shift':['pagi', 'siang', 'Malam', 'Siang', 'pagi']})\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65ae1bb7",
+   "metadata": {},
+   "source": [
+    "#### Mapping pada Data Frame dengan `applymap()`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37ade2f2",
+   "metadata": {},
+   "source": [
+    "- Untuk menerapkan fungsi pada keseluruhan dataframe dapat digunakan fungsi `applymap()`.\n",
+    "- Fungsi kali ini berupa fungsi yang mengembalikan nilai string menjadi huruf kecil."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7c371bff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>jenis_kelamin</th>\n",
+       "      <th>usia</th>\n",
+       "      <th>shift</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>pria</td>\n",
+       "      <td>23</td>\n",
+       "      <td>pagi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>wanita</td>\n",
+       "      <td>21</td>\n",
+       "      <td>siang</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>lelaki</td>\n",
+       "      <td>24</td>\n",
+       "      <td>malam</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>lelaki</td>\n",
+       "      <td>22</td>\n",
+       "      <td>siang</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>perempuan</td>\n",
+       "      <td>21</td>\n",
+       "      <td>pagi</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  jenis_kelamin  usia  shift\n",
+       "0          pria    23   pagi\n",
+       "1        wanita    21  siang\n",
+       "2        lelaki    24  malam\n",
+       "3        lelaki    22  siang\n",
+       "4     perempuan    21   pagi"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df.applymap(lambda x: x.lower() if type(x) == str else x)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f144e6c9",
+   "metadata": {},
+   "source": [
+    "#### `applymap()` dengan Dictionary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11da3466",
+   "metadata": {},
+   "source": [
+    "- Aturan mapping ini ditampung kedalam dictionary dengan nama variabel yaitu 'mapping'.\n",
+    "- Untuk menerapkan fungsi ini kita perlu memanggil fungsi `df.applymap()` dan jangan lupa menggunakan get."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ffbf68e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>jenis_kelamin</th>\n",
+       "      <th>usia</th>\n",
+       "      <th>shift</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>L</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>P</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>L</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>L</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>P</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  jenis_kelamin  usia  shift\n",
+       "0             L  None      1\n",
+       "1             P  None      2\n",
+       "2             L  None      3\n",
+       "3             L  None      2\n",
+       "4             P  None      1"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mapping = {'pria':'L',\n",
+    "           'lelaki':'L',\n",
+    "           'wanita':'P',\n",
+    "           'perempuan':'P',\n",
+    "           'pagi':1,\n",
+    "           'siang':2,\n",
+    "           'malam':3}\n",
+    "\n",
+    "df.applymap(mapping.get)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02831cea",
+   "metadata": {},
+   "source": [
+    "- Karena kita tidak menspesifikasikan mapping untuk kolom usia maka data kolom tersebut akan ditampilkan sebagai none.\n",
+    "- Untuk mensiasati hal tersebut, kita bisa menspesifikasikan kolom mana yang ingin di mapping."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "963d83f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>jenis_kelamin</th>\n",
+       "      <th>usia</th>\n",
+       "      <th>shift</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>L</td>\n",
+       "      <td>23</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>P</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>L</td>\n",
+       "      <td>24</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>L</td>\n",
+       "      <td>22</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>P</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  jenis_kelamin  usia  shift\n",
+       "0             L    23      1\n",
+       "1             P    21      2\n",
+       "2             L    24      3\n",
+       "3             L    22      2\n",
+       "4             P    21      1"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['jenis_kelamin', 'shift']] = df[['jenis_kelamin', 'shift']].applymap(mapping.get)\n",
+    "\n",
     "df"
    ]
   }
